s5-ui/pretty.css
/* Based on a combination of 'Blue Theme 2004' and the default. */

/* Following are the presentation styles -- edit away!
   Note that the 'body' font size may have to be changed if the resolution is
    different than expected. */

body {background: #000294; color: #fff; font-size: 1.8em;}
:link, :visited {text-decoration: none; color: #F8B73E;}
#controls :active {color: #88A !important;}
#controls :focus {outline: 1px dotted #227;}
h1, h2, h3, h4 {font-size: 100%; margin: 0; padding: 0; font-weight: inherit;}
ul, pre {margin: 0; line-height: 1em;}
html, body {margin: 0; padding: 0;}

blockquote, q {font-style: italic;}
blockquote {padding: 0 2em 0.5em; margin: 0 1.5em 0.5em; text-align: center; font-size: 1em;}
blockquote p {margin: 0;}
blockquote i {font-style: normal;}
blockquote b {display: block; margin-top: 0.5em; font-weight: normal; font-size: smaller; font-style: normal;}
blockquote b i {font-style: italic;}

kbd {font-weight: bold; font-size: 1em;}
sup {font-size: smaller; line-height: 1px;}

code {padding: 2px 0.25em; font-weight: bold; color: #AAABF8;}
code.bad, code del {color: red;}
code.old {color: silver;}
pre {padding: 0.15em; margin: 0.5em 7% 0.5em 7%; color: #533; font-size: 75%;}
pre code {display: block;}
ul {margin-left: 5%; margin-right: 7%; list-style: disc;}
li {margin-top: 0.75em; margin-right: 0;}
ul ul {line-height: 1;}
ul ul li {margin: .2em; font-size: 85%; list-style: square;}
img.leader {display: block; margin: 0 auto;}

div#header, div#footer {background: #005; color: #9183BF;
  font-family: Verdana, Helvetica, sans-serif;}
div#header {background: #005 url(bodybg.gif) -16px 0 no-repeat;
  line-height: 1px;}
div#footer {font-size: 0.5em; font-weight: bold; padding: 1em 0; height: 36px; border-top: 1px solid #08093F; background: #000136; }
#footer h1, #footer h2 {display: block; padding: 0 1em;}
#footer h2 {font-style: italic;}

div.long {font-size: 0.75em;}
.slide {
	font-family: georgia, Times, 'Times New Roman', serif;
  background: transparent url(bluebg.gif) repeat-x;
  width: 98%;
}
.slide h1 {position: absolute; left: 87px; z-index: 1;
 white-space: nowrap;
 text-transform: capitalize;
 top: 1em; width: 80%;
 margin: 0 auto; text-align: center; padding: 0;
 font: 150%/1em georgia, Times, 'Times New Roman', serif;
 color: #fff; background: transparent;
 margin-left: 0.15em;
 }
.slide h3 {font-size: 130%;}
h1 abbr {font-variant: small-caps;}

div#controls {position: absolute; left: 50%; bottom: 0;
  width: 50%;
  text-align: right; font: bold 0.9em Verdana, Helvetica, sans-serif;}
html>body div#controls {position: fixed; padding: 0 0 1em 0;
  top: auto;}
div#controls form {position: absolute; bottom: 0; right: 0; width: 100%;
  margin: 0; padding: 0;}
#controls #navLinks a {padding: 0; margin: 0 0.5em; 
  background: #005; border: none; color: #779; 
  cursor: pointer;}
#controls #navList {height: 1em;}
#controls #navList #jumplist {position: absolute; bottom: 0; right: 0; background: #DDD; color: #227;}

#currentSlide {text-align: center; font-size: 0.5em; color: #9183BF; font-family: Verdana, Helvetica, sans-serif;}

#slide0 {padding-top: 3.5em; font-size: 90%; }
#slide0 h1 {position: static; margin: 1em 0 1.33em; padding: 0;
   white-space: normal;
   background: transparent;
margin: 0 auto; text-align: center;
   font: 2.5em Georgia, Times, 'Times New Roman', serif; height: 281px;
   color: #fff;}
#slide0 h3 {font-size: 1.5em;}
#slide0 h4 {font-size: 1em;}
#slide0 h3, #slide0 h4, #slide0 p {margin: 0; text-align: center; color: #fff;}
#slide0 p {margin-top: 0.7em;}

ul.urls {list-style: none; display: inline; margin: 0;}
.urls li {display: inline; margin: 0;}
.note {display: none;}

